--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-/* Grundlegendes Button-Design */
 button {
   padding: 12px 24px;
   margin: 10px 5px;
@@ -11,7 +10,7 @@ button {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Hover- und Klick-Effekte */
+
 button:hover {
   transform: scale(1.03);
 }
@@ -20,7 +19,7 @@ button:active {
   transform: scale(0.98);
 }
 
-/* Spezifische Farben */
+
 .ready-btn {
   background-color: #4caf50;
   color: white;
@@ -59,7 +58,7 @@ button:active {
   transform-style: preserve-3d;
   transition: transform 0.8s ease;
   cursor: pointer;
-  /* margin: 0 auto; */  /* raus */
+  
   display: block;
   transform-origin: center center;
 }
@@ -101,13 +100,13 @@ button:active {
 body {
   margin: 0;
   padding: 0;
-  background-color: #0a1f3d; /* dunkelblau */
+  background-color: #0a1f3d;
   color: white;
   font-family: 'Segoe UI', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* für Karten mittig später: 'center' */
+  justify-content: flex-start;
   min-height: 100vh;
   text-align: center;
 }
@@ -123,7 +122,7 @@ body {
 }
 
 .modal-content {
-  background: #fff;
+  background: #ff8800;
   padding: 2rem;
   border-radius: 12px;
   text-align: center;
@@ -146,7 +145,7 @@ body {
   list-style: none;
   font-size: 1rem;
   font-weight: 500;
-  background-color: rgba(255, 255, 255, 0.05); /* leicht durchscheinend */
+  background-color: rgba(255, 255, 255, 0.05);
   transition: background-color 0.3s ease;
 }
 
